[gd_scene load_steps=2 format=3 uid="uid://c6ugi83l6l5cp"]

[ext_resource type="Script" path="res://Menus/Main_Scene.gd" id="1_yhchw"]

[node name="Main_Scene" type="Node2D"]
script = ExtResource("1_yhchw")

[node name="Label" type="Label" parent="."]
offset_left = 469.0
offset_top = 4.0
offset_right = 800.0
offset_bottom = 106.0
theme_override_font_sizes/font_size = 30
text = "Game"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Host_button" type="Button" parent="."]
offset_left = 463.0
offset_top = 557.0
offset_right = 691.0
offset_bottom = 656.0
text = "Host"

[node name="Join_button" type="Button" parent="."]
offset_left = 932.0
offset_top = 566.0
offset_right = 1160.0
offset_bottom = 665.0
text = "Join"

[node name="IP_address_insert" type="TextEdit" parent="."]
offset_left = 906.0
offset_top = 475.0
offset_right = 1190.0
offset_bottom = 532.0
theme_override_font_sizes/font_size = 26
placeholder_text = "192.168.0.1"

[node name="Server_name_insert" type="TextEdit" parent="."]
offset_left = 433.0
offset_top = 470.0
offset_right = 714.0
offset_bottom = 527.0
theme_override_font_sizes/font_size = 26
placeholder_text = "Server Name"

[node name="Nickname" type="Label" parent="."]
offset_left = 666.0
offset_top = 131.0
offset_right = 997.0
offset_bottom = 233.0
theme_override_font_sizes/font_size = 30
text = "You Nickname:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Player_name_insert" type="TextEdit" parent="Nickname"]
layout_mode = 0
offset_left = 12.0
offset_top = 120.0
offset_right = 347.0
offset_bottom = 172.0
theme_override_font_sizes/font_size = 26
text = "zeggs"

[node name="self_ip" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0

[node name="map_loaded" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0

[node name="main_connect" type="Button" parent="."]
offset_left = 77.0
offset_top = 105.0
offset_right = 291.0
offset_bottom = 206.0
text = "Refresh Server List
"

[node name="Server_list" type="RichTextLabel" parent="."]
offset_left = 35.0
offset_top = 330.0
offset_right = 377.0
offset_bottom = 673.0

[connection signal="pressed" from="Host_button" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="Join_button" to="." method="_on_join_button_pressed"]
[connection signal="pressed" from="main_connect" to="." method="_on_main_connect_pressed"]
